# manicmanix

./: README.md
be/: .env-example  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-pyinstaller  README.md  calculate.txt  docker-compose.yaml  log_uvicorn.sh  modules_requirements.txt  versions.json
be/app/: main.py
be/app/core/: config.py
be/cmd/: adb_status.py  scanner.py
be/modules/: latest_indicators_check  latest_indicators_update
be/modules/base/: README.md  requirements.txt  setup.cfg
be/modules/base/mvt/android/: cli.py  cmd_check_adb.py  cmd_check_androidqf.py  cmd_check_backup.py  cmd_check_bugreport.py  cmd_download_apks.py  utils.py
be/modules/base/mvt/android/artifacts/: artifact.py  dumpsys_accessibility.py  dumpsys_appops.py  dumpsys_battery_daily.py  dumpsys_battery_history.py  dumpsys_dbinfo.py  dumpsys_package_activities.py  dumpsys_packages.py  dumpsys_receivers.py  getprop.py  processes.py  settings.py
be/modules/base/mvt/android/parsers/: backup.py
be/modules/base/mvt/common/: artifact.py  cmd_check_iocs.py  command.py  help.py  indicators.py  logo.py  module.py  options.py  updates.py  url.py  utils.py  version.py  virustotal.py
be/modules/base/mvt/ios/: cli.py  cmd_check_backup.py  cmd_check_fs.py  decrypt.py  versions.py
be/tests/: test_android.py  test_check_device_status.py  test_endpoints.py  test_poc.py
be/vtrotasi/: .project  Dockerfile  README.md  contoh-response-VT.json  docker-compose.yml  note.txt  task_id failed.txt
fe/: .env  electron.vite.config.mjs  package-lock.json  package.json
(+125 files in other folders)
