[metadata]
name = mvt
version = attr: mvt.common.version.MVT_VERSION
keywords = security, mobile, forensics, malware
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = ./
include_package_data = True

[options.packages.find]
where = ./

[options.entry_points]
console_scripts =
    mvt-ios = mvt.ios:cli
    mvt-android = mvt.android:cli

[options.package_data]
mvt = ios/data/*.json

[flake8]
max-complexity = 10
max-line-length = 1000
ignore =
    C901,
    E265,
    F401,
    E127,
    W503,
    E226,
    E203

[pylint]
score = no
reports = no
output-format = colorized

max-locals = 25
max-args = 10

good-names = i,m

min-similarity-lines = 10
ignore-comments = yes
ignore-docstrings = yes
ignore-imports = yes

ignored-argument-names=args|kwargs

# https://pylint.pycqa.org/en/stable/technical_reference/features.html
disable =
    too-many-instance-attributes,
    broad-except,
    abstract-method,
    dangerous-default-value,
    too-few-public-methods,
    missing-docstring,
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,

[mypy]
ignore_missing_imports = True

[isort]
profile=black
